--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ts-eslint",
+  "name": "ts-starter",
   "version": "1.0.0",
-  "description": "",
+  "description": "typescript app starter",
   "main": "index.js",
   "scripts": {
     "build": "rimraf ./build && tsc",
@@ -10,6 +10,11 @@
     "lint": "eslint . --ext .ts",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "prettier-watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier-format && npm run lint"
+    }
   },
   "keywords": [],
   "author": "",
@@ -21,6 +26,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
     "nodemon": "^2.0.3",
     "onchange": "^6.1.0",
     "prettier": "^2.0.4",
