--- a/package.json
+++ b/package.json
@@ -2,34 +2,32 @@
   "name": "ts-starter",
   "version": "1.0.0",
   "description": "typescript app starter",
-  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/seunguklee/ts-starter.git"
+  },
   "scripts": {
+    "type-check": "tsc --noEmit --skipLibCheck",
     "build": "rimraf ./build && tsc",
     "start:dev": "nodemon",
-    "start": "npm run build && node build/index.js",
-    "lint": "eslint . --ext .ts",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "prettier-watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}"
+    "start": "yarn run build && node build/index.js",
+    "lint": "eslint . --ext .ts"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prettier-format && npm run lint"
+      "pre-commit": "yarn run lint"
     }
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Seunguk Lee",
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "nodemon": "^2.0.3",
-    "onchange": "^6.1.0",
-    "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
