--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn run lint"
+      "pre-push": "yarn run lint"
     }
   },
   "keywords": [],
