--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "rimraf ./build && tsc",
     "start:dev": "nodemon",
     "start": "yarn run build && node build/index.js",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "format": "eslint . --ext .ts --fix"
   },
   "husky": {
     "hooks": {
