--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,14 @@
     "target": "ESNext",
     "declaration": true,
     "module": "commonjs",
-    "lib": ["ESNext"],
+    "lib": [
+      "ESNext"
+    ],
     "allowJs": true,
     "outDir": "build",
     "rootDir": "src",
     "strict": true,
+    "noUncheckedIndexedAccess": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
